--- a/Home Page.html
+++ b/Home Page.html
@@ -26,9 +26,47 @@
 		 <img class="card-img-top" src="https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?htpps://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
 		 <div class="card-body">
 		  <h5 class="card-title">Sander Wehkamp</h5>
-		  <p class="card-text"> This is a description.</p>
+		  <p class="card-text">[This is a description.]</p>
 		 </div>
 		</div>
+	  <div class="card">
+    	<img class="card-img-top" src="https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+    	<div class="card-body">
+      	 <h5 class="card-title">Kelly Sikkema</h5>
+         <p class="card-text">[This is a description]</p>
+    	</div>
+  	 </div>
+  	<div class="card">
+    	<img class="card-img-top" src="https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+    	<div class="card-body">
+      	<h5 class="card-title">Katie Moum</h5>
+      	<p class="card-text">[This is a description.]</p>
+    	</div>
+  	</div>
+	</div>
+<br>	  
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Dmitry Bayer</h5>
+      <p class="card-text">[This is a description.]</p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1494916794454-f0045e88552d?https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Samara Doole</h5>
+      <p class="card-text">[This is a description.]</p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Anton Darius</h5>
+      <p class="card-text">[This is a description.]</p>
+    </div>
+  </div>
 	  </div>
 	<!-- InstanceEndEditable -->
     <!-- Optional JavaScript -->
