--- a/Home Page.html
+++ b/Home Page.html
@@ -19,31 +19,31 @@
 	<div class="container">
    	  <h1>Unsplash Photographer Spotlight</h1>
 		<p>[My mission statement.]</p>
-	</div>
+	
 	  
-	 <div class="card-deck">
-	  <div class="card">
+<div class="card-deck">
+  <div class="card">
 		 <img class="card-img-top" src="https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?htpps://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
 		 <div class="card-body">
 		  <h5 class="card-title">Sander Wehkamp</h5>
 		  <p class="card-text">[This is a description.]</p>
 		 </div>
 		</div>
-	  <div class="card">
+  <div class="card">
     	<img class="card-img-top" src="https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     	<div class="card-body">
       	 <h5 class="card-title">Kelly Sikkema</h5>
          <p class="card-text">[This is a description]</p>
     	</div>
   	 </div>
-  	<div class="card">
+  <div class="card">
     	<img class="card-img-top" src="https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     	<div class="card-body">
       	<h5 class="card-title">Katie Moum</h5>
       	<p class="card-text">[This is a description.]</p>
     	</div>
   	</div>
-	</div>
+</div>
 <br>	  
 <div class="card-deck">
   <div class="card">
@@ -67,8 +67,13 @@
       <p class="card-text">[This is a description.]</p>
     </div>
   </div>
-	  </div>
+</div>
+</div>
 	<!-- InstanceEndEditable -->
+	  
+	<footer>
+	  <p>[Placeholder content.]</p>
+	</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
