--- a/Home Page.html
+++ b/Home Page.html
@@ -1,83 +1,81 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/Unsplash.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+  <!-- InstanceBegin template="/Templates/Unsplash.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- InstanceBeginEditable name="doctitle" -->
-    <title>Hello, world!</title>
-    <!-- InstanceEndEditable -->
-    <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
+  <title>Hello, world!</title>
+  <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
   </head>
   <body>
-	<!-- InstanceBeginEditable name="EditableRegion" -->
-	  
-	<div class="container">
-   	  <h1>Unsplash Photographer Spotlight</h1>
-		<p>[My mission statement.]</p>
-	
-	  
-<div class="card-deck">
-  <div class="card">
-		 <img class="card-img-top" src="https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?htpps://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-		 <div class="card-body">
-		  <h5 class="card-title">Sander Wehkamp</h5>
-		  <p class="card-text">[This is a description.]</p>
-		 </div>
-		</div>
-  <div class="card">
-    	<img class="card-img-top" src="https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-    	<div class="card-body">
-      	 <h5 class="card-title">Kelly Sikkema</h5>
-         <p class="card-text">[This is a description]</p>
-    	</div>
-  	 </div>
-  <div class="card">
-    	<img class="card-img-top" src="https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-    	<div class="card-body">
-      	<h5 class="card-title">Katie Moum</h5>
-      	<p class="card-text">[This is a description.]</p>
-    	</div>
-  	</div>
-</div>
-<br>	  
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Dmitry Bayer</h5>
-      <p class="card-text">[This is a description.]</p>
+  <div class="container">
+    <h1>Unsplash Photographer Spotlight</h1>
+    <p>[My mission statement.]</p>
+    <!-- InstanceBeginEditable name="EditableRegion" -->
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?htpps://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Sander Wehkamp</h5>
+          <p class="card-text">[This is a description.]</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Kelly Sikkema</h5>
+          <p class="card-text">[This is a description]</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Katie Moum</h5>
+          <p class="card-text">[This is a description.]</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/profile-1494916794454-f0045e88552d?https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Samara Doole</h5>
-      <p class="card-text">[This is a description.]</p>
+    <br>
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Dmitry Bayer</h5>
+          <p class="card-text">[This is a description.]</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1494916794454-f0045e88552d?https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Samara Doole</h5>
+          <p class="card-text">[This is a description.]</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Anton Darius</h5>
+          <p class="card-text">[This is a description.]</p>
+        </div>
+      </div>
     </div>
+    <!-- InstanceEndEditable -->
+    <footer>
+      <p>[Placeholder content.]</p>
+    </footer>
   </div>
-  <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/profile-1499866438764-4f6aec3087bb?https://images.unsplash.com/profile-1537868332363-4cbdc6af1c27?https://images.unsplash.com/profile-1493072774144-13eaccd59170?https://images.unsplash.com/profile-1539880717637-20eb4872b742?https://images.unsplash.com/profile-1460461456342-a21eb34982a0https://images.unsplash.com/profile-1540218473891-209280bdc08c?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Anton Darius</h5>
-      <p class="card-text">[This is a description.]</p>
-    </div>
-  </div>
-</div>
-</div>
-	<!-- InstanceEndEditable -->
-	  
-	<footer>
-	  <p>[Placeholder content.]</p>
-	</footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <!-- Optional JavaScript --> 
+  <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-<!-- InstanceEnd --></html>
+  <!-- InstanceEnd -->
+</html>
